improve speech instructions

--- a/speech-instructions/dedup-podcasts.ipynb
+++ b/speech-instructions/dedup-podcasts.ipynb
@@ -53,7 +53,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "d290c8d6",
+   "id": "4b65d6c5",
    "metadata": {},
    "outputs": [
     {
@@ -74,7 +74,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "af8d2a1a",
+   "id": "13a616a6",
    "metadata": {},
    "outputs": [
     {
@@ -161,7 +161,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "de35780f",
+   "id": "cb5d3675",
    "metadata": {
     "scrolled": true
    },
@@ -181,7 +181,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "ad9de6ab",
+   "id": "fd246bb5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -197,7 +197,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "56e92a11",
+   "id": "7ef6be73",
    "metadata": {},
    "outputs": [
     {
@@ -239,7 +239,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "c3ba8171",
+   "id": "d1300e0f",
    "metadata": {},
    "outputs": [
     {
@@ -261,7 +261,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "f344d9f1",
+   "id": "33f08e80",
    "metadata": {},
    "outputs": [
     {
@@ -293,7 +293,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "173777e5",
+   "id": "a4dfce1b",
    "metadata": {},
    "outputs": [
     {
@@ -315,7 +315,7 @@
   {
    "cell_type": "code",
    "execution_count": 33,
-   "id": "f4b08943",
+   "id": "57b66404",
    "metadata": {},
    "outputs": [
     {
@@ -336,7 +336,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "2b4175be",
+   "id": "6ad061e8",
    "metadata": {},
    "outputs": [
     {
@@ -354,7 +354,7 @@
   {
    "cell_type": "code",
    "execution_count": 34,
-   "id": "cead0d3a",
+   "id": "18c05105",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -373,7 +373,7 @@
   {
    "cell_type": "code",
    "execution_count": 36,
-   "id": "ffa95e80",
+   "id": "62dd7f9d",
    "metadata": {},
    "outputs": [
     {
@@ -401,7 +401,7 @@
   {
    "cell_type": "code",
    "execution_count": 37,
-   "id": "bb9bd727",
+   "id": "bcefcaa4",
    "metadata": {},
    "outputs": [
     {
@@ -419,7 +419,7 @@
   {
    "cell_type": "code",
    "execution_count": 38,
-   "id": "bc98ede7",
+   "id": "f49e4fe8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -432,7 +432,7 @@
   {
    "cell_type": "code",
    "execution_count": 40,
-   "id": "8af5c52f",
+   "id": "e0d08f1f",
    "metadata": {},
    "outputs": [
     {
@@ -454,7 +454,7 @@
   {
    "cell_type": "code",
    "execution_count": 41,
-   "id": "de611437",
+   "id": "c58eaa69",
    "metadata": {},
    "outputs": [
     {
@@ -484,7 +484,7 @@
   {
    "cell_type": "code",
    "execution_count": 43,
-   "id": "e3aa74c9",
+   "id": "8bb9d6ac",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -494,7 +494,7 @@
   {
    "cell_type": "code",
    "execution_count": 44,
-   "id": "0e2f1c92",
+   "id": "919ceb5a",
    "metadata": {
     "scrolled": true
    },
@@ -535,8 +535,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "f94f3e57",
+   "execution_count": 45,
+   "id": "44f55609",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -545,10 +545,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "d72352ee",
+   "execution_count": 46,
+   "id": "fd7cd556",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "420dfdf5311247958598b89ed30ee2f3",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "dedup-podcasts.zip:   0%|          | 0.00/2.46G [00:00<?, ?B/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "CommitInfo(commit_url='https://huggingface.co/datasets/malaysia-ai/dedup-malaysian-speakers/commit/ed4fa7fdd4c43de2a01b5cfa321f492821246e82', commit_message='Upload dedup-podcasts.zip with huggingface_hub', commit_description='', oid='ed4fa7fdd4c43de2a01b5cfa321f492821246e82', pr_url=None, repo_url=RepoUrl('https://huggingface.co/datasets/malaysia-ai/dedup-malaysian-speakers', endpoint='https://huggingface.co', repo_type='dataset', repo_id='malaysia-ai/dedup-malaysian-speakers'), pr_revision=None, pr_num=None)"
+      ]
+     },
+     "execution_count": 46,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "api.upload_file(\n",
     "    path_or_fileobj=\"dedup-podcasts.zip\",\n",
