added short instructions

--- a/speech-instructions/upload-dedup-malaysian-others.ipynb
+++ b/speech-instructions/upload-dedup-malaysian-others.ipynb
@@ -30,12 +30,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "25G\tdedup-parliament\r\n"
+      "15G\tdedup-others\r\n"
      ]
     }
    ],
    "source": [
-    "!du -hs dedup-parliament"
+    "!du -hs dedup-others"
    ]
   },
   {
@@ -47,7 +47,7 @@
     {
      "data": {
       "text/plain": [
-       "610804"
+       "411637"
       ]
      },
      "execution_count": 3,
@@ -56,7 +56,7 @@
     }
    ],
    "source": [
-    "files = glob('dedup-parliament/*.mp3')\n",
+    "files = glob('dedup-others/*.mp3')\n",
     "len(files)"
    ]
   },
@@ -77,7 +77,7 @@
     "    for i in tqdm(range(len(files))):\n",
     "        s = os.stat(files[i]).st_size\n",
     "        if s + total >= partition_size:\n",
-    "            part_name = f\"dedup-parliament-{index}-{current_index}.zip\"\n",
+    "            part_name = f\"dedup-others-{index}-{current_index}.zip\"\n",
     "                \n",
     "            with zipfile.ZipFile(part_name, 'w', zipfile.ZIP_DEFLATED) as zipf:\n",
     "                for f in temp:\n",
@@ -105,7 +105,7 @@
     "            total += s\n",
     "        \n",
     "    if len(temp):\n",
-    "        part_name = f\"dedup-parliament-{index}-{current_index}.zip\"\n",
+    "        part_name = f\"dedup-others-{index}-{current_index}.zip\"\n",
     "\n",
     "        with zipfile.ZipFile(part_name, 'w', zipfile.ZIP_DEFLATED) as zipf:\n",
     "            for f in temp:\n",
@@ -136,18 +136,18 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|█████████████████████████████████████████████████████████████████████████████████| 1000/1000 [00:00<00:00, 240692.30it/s]\n"
+      "100%|█████████████████████████████████████████████████████████████████████████████████| 1000/1000 [00:00<00:00, 358150.80it/s]\n"
      ]
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "88e221ed2f0e421890433f39dc7397fc",
+       "model_id": "2c05897f61774db28aa4e365951b7b5a",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "dedup-parliament-0-0.zip:   0%|          | 0.00/41.4M [00:00<?, ?B/s]"
+       "dedup-others-0-0.zip:   0%|          | 0.00/34.7M [00:00<?, ?B/s]"
       ]
      },
      "metadata": {},
@@ -168,27 +168,27 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "  0%|                                                                                               | 0/61080 [00:00<?, ?it/s]\n",
-      "  0%|                                                                                               | 0/61080 [00:00<?, ?it/s]\n",
-      "100%|███████████████████████████████████████████████████████████████████████████████| 61080/61080 [00:00<00:00, 387999.16it/s]\n",
-      "100%|███████████████████████████████████████████████████████████████████████████████| 61080/61080 [00:00<00:00, 385952.73it/s]\n",
-      "100%|███████████████████████████████████████████████████████████████████████████████| 61080/61080 [00:00<00:00, 425323.51it/s]\n",
-      "100%|███████████████████████████████████████████████████████████████████████████████| 61080/61080 [00:00<00:00, 255134.38it/s]\n",
-      " 25%|████████████████████                                                           | 15473/61080 [00:00<00:00, 151373.39it/s]\n",
-      "100%|███████████████████████████████████████████████████████████████████████████████| 61080/61080 [00:00<00:00, 128971.63it/s]\n",
-      "100%|███████████████████████████████████████████████████████████████████████████████| 61080/61080 [00:00<00:00, 147900.94it/s]\n",
-      "100%|███████████████████████████████████████████████████████████████████████████████| 61080/61080 [00:00<00:00, 145533.80it/s]\n"
+      "100%|███████████████████████████████████████████████████████████████████████████████| 41163/41163 [00:00<00:00, 159643.50it/s]\n",
+      "100%|███████████████████████████████████████████████████████████████████████████████| 41163/41163 [00:00<00:00, 148008.24it/s]\n",
+      "100%|███████████████████████████████████████████████████████████████████████████████| 41163/41163 [00:00<00:00, 120715.62it/s]\n",
+      "100%|███████████████████████████████████████████████████████████████████████████████| 41163/41163 [00:00<00:00, 206196.19it/s]\n",
+      "100%|███████████████████████████████████████████████████████████████████████████████| 41163/41163 [00:00<00:00, 223430.82it/s]\n",
+      "100%|███████████████████████████████████████████████████████████████████████████████| 41163/41163 [00:00<00:00, 125269.83it/s]\n",
+      "100%|███████████████████████████████████████████████████████████████████████████████| 41163/41163 [00:00<00:00, 217000.48it/s]\n",
+      "100%|███████████████████████████████████████████████████████████████████████████████| 41163/41163 [00:00<00:00, 182682.12it/s]\n",
+      "100%|███████████████████████████████████████████████████████████████████████████████| 41163/41163 [00:00<00:00, 254992.22it/s]\n",
+      "100%|███████████████████████████████████████████████████████████████████████████████| 41163/41163 [00:00<00:00, 133537.11it/s]\n"
      ]
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "a85197f8f748453e91db66b31489ae11",
+       "model_id": "9cd4f588296b4df592a2c6ab633b65ac",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "dedup-parliament-5-0.zip:   0%|          | 0.00/2.50G [00:00<?, ?B/s]"
+       "dedup-others-0-0.zip:   0%|          | 0.00/1.42G [00:00<?, ?B/s]"
       ]
      },
      "metadata": {},
@@ -197,12 +197,12 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "5d9a8fd50f4648419737521f601f53d0",
+       "model_id": "a4bc0b8ed1634461bf51704d7f3aeeb6",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "dedup-parliament-2-0.zip:   0%|          | 0.00/2.51G [00:00<?, ?B/s]"
+       "dedup-others-3-0.zip:   0%|          | 0.00/1.42G [00:00<?, ?B/s]"
       ]
      },
      "metadata": {},
@@ -211,12 +211,12 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "5a0b9fca83b240edbf6368d67ddcd9b3",
+       "model_id": "2be72e87d78a466792eb2f341a41a5ec",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "dedup-parliament-1-0.zip:   0%|          | 0.00/2.50G [00:00<?, ?B/s]"
+       "dedup-others-7-0.zip:   0%|          | 0.00/1.42G [00:00<?, ?B/s]"
       ]
      },
      "metadata": {},
@@ -225,12 +225,12 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "0ce519a55f454b6586f6a66ea55da13b",
+       "model_id": "84ff8ebadbe74898b8e7eee325be883c",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "dedup-parliament-7-0.zip:   0%|          | 0.00/2.51G [00:00<?, ?B/s]"
+       "dedup-others-6-0.zip:   0%|          | 0.00/1.42G [00:00<?, ?B/s]"
       ]
      },
      "metadata": {},
@@ -239,12 +239,12 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "3057b2ea49be42f2b95f9a3759d7bdda",
+       "model_id": "977011c1456c45ad9e7b1fc967344716",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "dedup-parliament-8-0.zip:   0%|          | 0.00/2.51G [00:00<?, ?B/s]"
+       "dedup-others-8-0.zip:   0%|          | 0.00/1.42G [00:00<?, ?B/s]"
       ]
      },
      "metadata": {},
@@ -253,12 +253,12 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "671087d4ab04484fb2008924f0730abf",
+       "model_id": "ab05b913ea5d46d1be374d3ecac45003",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "dedup-parliament-9-0.zip:   0%|          | 0.00/2.51G [00:00<?, ?B/s]"
+       "dedup-others-4-0.zip:   0%|          | 0.00/1.42G [00:00<?, ?B/s]"
       ]
      },
      "metadata": {},
@@ -267,12 +267,12 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "ac22eb0bb3e742ac8e7f2c3c4bdfc124",
+       "model_id": "6f8660fdff6941d79477f210677afab7",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "dedup-parliament-6-0.zip:   0%|          | 0.00/2.50G [00:00<?, ?B/s]"
+       "dedup-others-9-0.zip:   0%|          | 0.00/1.41G [00:00<?, ?B/s]"
       ]
      },
      "metadata": {},
@@ -281,12 +281,12 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "490fcd5ca4fa426fa74ddb3828d39ae0",
+       "model_id": "3bf4597821844596adfbd47ff19469f4",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "dedup-parliament-0-0.zip:   0%|          | 0.00/2.50G [00:00<?, ?B/s]"
+       "dedup-others-2-0.zip:   0%|          | 0.00/1.42G [00:00<?, ?B/s]"
       ]
      },
      "metadata": {},
@@ -295,12 +295,12 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "e289485b88a94e7c92ed42f78e5bdf2c",
+       "model_id": "eab61ac12e9e4d86958c314e6ee23b87",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "dedup-parliament-3-0.zip:   0%|          | 0.00/2.51G [00:00<?, ?B/s]"
+       "dedup-others-1-0.zip:   0%|          | 0.00/1.42G [00:00<?, ?B/s]"
       ]
      },
      "metadata": {},
@@ -309,12 +309,12 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "1fdaa3c6b88b4b29adb3680ee6f6742d",
+       "model_id": "1244b689fcbd447b8de873a18408798c",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "dedup-parliament-4-0.zip:   0%|          | 0.00/2.51G [00:00<?, ?B/s]"
+       "dedup-others-5-0.zip:   0%|          | 0.00/1.42G [00:00<?, ?B/s]"
       ]
      },
      "metadata": {},
@@ -324,18 +324,18 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|████████████████████████████████████████████████████████████████████████████████████████| 4/4 [00:00<00:00, 38657.18it/s]\n"
+      "100%|████████████████████████████████████████████████████████████████████████████████████████| 7/7 [00:00<00:00, 59554.01it/s]\n"
      ]
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "772a77b707d24ec2a270e41de7d403e6",
+       "model_id": "576de9890fdc4cd580b450760b43d9e1",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "dedup-parliament-10-0.zip:   0%|          | 0.00/153k [00:00<?, ?B/s]"
+       "dedup-others-10-0.zip:   0%|          | 0.00/192k [00:00<?, ?B/s]"
       ]
      },
      "metadata": {},
